# PhantasyTestbed

./: .gitignore  CMakeLists.txt  README.md  gen_emscripten_debug.sh  gen_emscripten_release.sh  index.html
build_scripts/: gen_emscripten_debug.sh  gen_emscripten_release.sh  gen_visualstudio2015.bat
gen_scripts/: gen_emscripten_debug.sh  gen_emscripten_release.sh  gen_make_debug.sh  gen_make_release.sh  gen_ninja_debug.sh  gen_ninja_release.sh  gen_visualstudio2015.bat  gen_visualstudio2015_cuda.bat  gen_visualstudio2017.bat  gen_visualstudio2017_v140.bat  gen_xcode.sh  gen_xcode_macos.sh
res/: sponza.gltf
resources/: sponza_copyright.txt
resources/sponzaPBR/: sponzaPBR.mtl
resources/sponzaPBR/textures_pbr/: gi_flag.tga
src/: Cube.hpp  GltfLoader.cpp  GltfLoader.hpp  GltfWriter.cpp  GltfWriter.hpp  PhantasyTestbed.cpp  PhantasyTestbedMain.cpp  SponzaLoader.cpp  SponzaLoader.hpp  TestbedLogic.cpp  TestbedLogic.hpp  TestbedUpdateable.cpp  TestbedUpdateable.hpp
